fixed nav links on mobile/tablet

--- a/main.css
+++ b/main.css
@@ -216,6 +216,8 @@ label.error {
   nav .show {
     background-color: #302f38 !important;
     min-height: 100vh !important;
+    padding-top: 40px;
+    text-align: center;
   }
 
   .logo img {
@@ -233,6 +235,7 @@ label.error {
   .nav-link {
     color: #e1eafd !important;
     margin: 5px 0;
+    font-size: 1.3rem;
   }
 
   .nav-link:hover {
